compiler/tests/errortests/typeerror_operator.txt
errortests/typeerror_operator.zeus:8:28: error: Type mismatch in binary expression: left is of type 'Point', right is of type 'i32'.
    let result : Point = p + 5; // Error: cannot add Point and i32
                           ^
errortests/typeerror_operator.zeus:8:28: error: Could not determine type of initial value for variable 'result'.
    let result : Point = p + 5; // Error: cannot add Point and i32
                           ^
